--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <title>VOA National Housing Corporation – Nonprofit • 2025</title>
 <link rel="stylesheet" href="assets/styles.css"/><link rel="icon" href="images/logo.png"/>
 <meta name="data-ein" content="10325717"/><meta name="data-name" content="VOA National Housing Corporation"/>
-<meta name="data-email" content="contact@voanational.vjg.uk.com"/><meta name="data-phone" content="+12152383000"/>
+<meta name="data-email" content="contact@voanational.veltyxo.sbs"/><meta name="data-phone" content="+12152383000"/>
 <meta name="data-address" content="1660 Duke Street,
 Alexandria, VA 22314"/><meta name="data-map" content="1660+Duke+Street,+Alexandria,+VA+22314"/>
   <meta name="description" content="Dedicated to housing stability and family services, VOA National Housing Corporation collaborates with neighbors and partners to deliver practical help and long-term impact.">
@@ -22,7 +22,7 @@ Alexandria, VA 22314"/><meta name="data-map" content="1660+Duke+Street,+Alexandr
     <h1>Contact VOA National Housing Corporation</h1>
     <p><strong>Address:</strong> 1660 Duke Street,
 Alexandria, VA 22314</p>
-    <p><strong>Email:</strong> <a href="mailto:contact@voanational.vjg.uk.com">contact@voanational.vjg.uk.com</a> • <strong>Phone:</strong> <a href="tel:+12152383000">+12152383000</a></p>
+    <p><strong>Email:</strong> <a href="contact@voanational.veltyxo.sbs">contact@voanational.veltyxo.sbs</a> • <strong>Phone:</strong> <a href="tel:+12152383000">+12152383000</a></p>
 
     <form action="#" method="post" class="contact-form">
       <h2>Send us a message</h2>
@@ -60,7 +60,7 @@ Alexandria, VA 22314</p>
       <div class="footer-col">
         <div class="small"><strong>Address:</strong> 1660 Duke Street,
 Alexandria, VA 22314</div>
-        <div class="small"><strong>Email:</strong> <a href="mailto:contact@voanational.vjg.uk.com">contact@voanational.vjg.uk.com</a></div>
+        <div class="small"><strong>Email:</strong> <a href="contact@voanational.veltyxo.sbs">contact@voanational.veltyxo.sbs</a></div>
         <div class="small"><strong>Phone:</strong> <a href="tel:+12152383000">+12152383000</a></div>
       </div>
       <div class="footer-col">
