Force replace email (safe)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="images/logo.png"/>
 <meta name="data-ein" content="10325717"/>
 <meta name="data-name" content="VOA National Housing Corporation"/>
-<meta name="data-email" content="contact@voanational.vjg.uk.com"/>
+<meta name="data-email" content="contact@voanational.veltyxo.sbs"/>
 <meta name="data-phone" content="+12152383000"/>
 <meta name="data-address" content="1660 Duke Street,
 Alexandria, VA 22314"/>
@@ -61,7 +61,7 @@ Alexandria, VA 22314"/>
       <div class="footer-col">
         <div class="small"><strong>Address:</strong> 1660 Duke Street,
 Alexandria, VA 22314</div>
-        <div class="small"><strong>Email:</strong> <a href="mailto:contact@voanational.vjg.uk.com">contact@voanational.vjg.uk.com</a></div>
+        <div class="small"><strong>Email:</strong> <a href="contact@voanational.veltyxo.sbs">contact@voanational.veltyxo.sbs</a></div>
         <div class="small"><strong>Phone:</strong> <a href="tel:+12152383000">+12152383000</a></div>
       </div>
       <div class="footer-col">
